# algo-trading-class

./: .gitignore  README.md  multi_strat_portfolio.py  pyproject.toml  setup.py
classes/: analyze_performance.py  forex_calculator.py  risk_manager.py  trading_strategy.py
modules/: data_loader.py  portfolio.py  visualization.py
notebooks/: USDJPY.ipynb  trend_following_demo.ipynb  trend_following_demo.py
prices/: AUDUSD_Candlestick_1_Hour_BID_01.01.2020-31.08.2024.csv  BRENT.CMDUSD_Candlestick_1_Hour_BID_01.01.2020-31.08.2024.csv  BTCUSD_Candlestick_1_Hour_BID_01.01.2020-31.08.2024.csv  COCOA.CMDUSD_Candlestick_1_Hour_BID_01.01.2020-31.08.2024.csv  COFFEE.CMDUSX_Candlestick_1_Hour_BID_01.01.2020-31.08.2024.csv  COPPER.CMDUSD_Candlestick_1_Hour_BID_01.01.2020-31.08.2024.csv  COTTON.CMDUSX_Candlestick_1_Hour_BID_01.01.2020-31.08.2024.csv  DIESEL.CMDUSD_Candlestick_1_Hour_BID_01.01.2020-31.08.2024.csv  DOLLAR.IDXUSD_Candlestick_1_Hour_BID_01.01.2020-31.08.2024.csv  ETHUSD_Candlestick_1_Hour_BID_01.01.2020-31.08.2024.csv  EURUSD_Candlestick_1_Hour_BID_01.01.2020-31.08.2024.csv  GAS.CMDUSD_Candlestick_1_Hour_BID_01.01.2020-31.08.2024.csv  GBPUSD_Candlestick_1_Hour_BID_01.01.2020-31.08.2024.csv  LIGHT.CMDUSD_Candlestick_1_Hour_BID_01.01.2020-31.08.2024.csv  NZDUSD_Candlestick_1_Hour_BID_01.01.2020-31.08.2024.csv  OJUICE.CMDUSX_Candlestick_1_Hour_BID_01.01.2020-31.08.2024.csv  SOYBEAN.CMDUSX_Candlestick_1_Hour_BID_01.01.2020-31.08.2024.csv  SUGAR.CMDUSD_Candlestick_1_Hour_BID_01.01.2020-31.08.2024.csv  UKGILT.TRGBP_Candlestick_1_Hour_BID_01.01.2020-31.08.2024.csv  (+10 more)
(+21 files in other folders)
