[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trading-strategy-framework"
version = "0.1.0"
authors = [{ name="Your Name", email="your.email@example.com" }]
description = "A flexible trading strategy framework"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.0",  # For data downloading
    "matplotlib>=3.7.0",  # For plotting
    "scipy>=1.10.0"  # For statistical analysis
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "mypy>=1.3.0",
    "ruff>=0.0.270"
]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
